Deployment/wordpress_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
    tier: frontend
  # We use ClusterIP because ALB target-type is 'ip'
  type: ClusterIP

---
