Deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
    # 1. Use the AWS Load Balancer Controller
    alb.ingress.kubernetes.io/scheme: internet-facing

    # 2. Route traffic directly to Pod IPs (Faster, required for Fargate, works on EC2)
    alb.ingress.kubernetes.io/target-type: ip

    # 3. Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-path: /wp-login.php
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'

spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
